Expand CRX magic number list in sniffer for CRX3

Bug: 831284
Change-Id: I84d27cfb61725524d1ec9b12ffaa1bda221529ff
Reviewed-on: https://chromium-review.googlesource.com/1005797
Reviewed-by: Asanka Herath <asanka@chromium.org>
Commit-Queue: Joshua Pawlicki <waffles@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549887}
Former-commit-id: 450258caf4b2019711d1c5d09d2dd8d3003df58f